--- a/package.json
+++ b/package.json
@@ -9,11 +9,28 @@
   },
   "license": "MIT",
   "scripts": {
-    "run": "node app.js"
+    "dev": "NODE_ENV=development babel-node $NODE_DEBUG_OPTION app.js",
+    "test": "NODE_ENV=test mocha test/**/*.js"
   },
   "dependencies": {
     "lodash": "^4.17.5",
     "moment": "^2.22.1",
     "moment-business-days": "^1.0.6"
+  },
+  "devDependencies": {
+    "babel-cli": "6.x",
+    "babel-eslint": "8.x",
+    "babel-preset-node6": "",
+    "babel-register": "^6.26.0",
+    "better-npm-run": "0.1.0",
+    "chai": "4.x",
+    "chai-subset": "1.x",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "16.x",
+    "eslint-plugin-flowtype": "2.x",
+    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-react": "7.x",
+    "mocha": "^5.0.5"
   }
 }
