--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fresh-mrp",
   "description": "MRP2 planning app",
   "author": "Denis Kiselev (http://deksden.com/)",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/Diana-cosmetology/Fresh-MRP.git"
@@ -14,7 +14,9 @@
     "server": "NODE_ENV=development babel-node $NODE_DEBUG_OPTION server/server.js"
   },
   "dependencies": {
+    "body-parser": "latest",
     "express": "^4.16.3",
+    "express-validator": "^5.2.0",
     "lodash": "^4.17.5",
     "moment": "^2.22.1",
     "moment-business-days": "^1.0.6",
